# RTU-PyTorch-Project

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
classifier/: __init__.py  cifar10_tutorial.ipynb  load_data.py  train.py
classifier/data/: model.pth
classifier/train/: __init__.py  data_module.py  module.py
classifier/v1/: __init__.py  load_data.py  model.py  tests.py  train.py
unet/: config.py  model.py  predict.py  test.py  train.py
